Relative add-ons pathnames are now searched in ADDON_PATH too if they're not found from current working directory. Fix #6427.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@39661 a95241bf-73f2-0310-859d-f6bbb57e9c96